# libsdi12-verifier

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
debian/: changelog  control  copyright  rules  sdi12-verifier.1  sdi12-verifier.install  sdi12-verifier.lintian-overrides  sdi12-verifier.manpages  watch
debian/source/: lintian-overrides  options
hal/: hal_loopback.c  hal_posix.c  hal_win32.c
include/: hal.h  reporter.h  test_suite.h  timing.h  verifier.h
src/: main.c  monitor.c  recorder_tests.c  reporter.c  sensor_tests.c  test_suite.c  timing.c  transparent.c
